--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,189 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap');  
+
+*, html{
+  font-family: 'Poppins', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+*,
+  *::before,
+  *::after {
+    box-sizing: border-box;
   }
+  
+  /* Remove default margin */
+  * {
+    margin: 0;
+    padding: 0;
+    font: inherit;
+  }
+  
+  /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
+  ul,
+  ol {
+    list-style: none;
+  }
+  
+  /* Set core root defaults */
+  html {
+    scroll-behavior: smooth;
+  }
+  
+  html,
+  body {
+    /* overflow-x: hidden; */
+    height: 100%;
+  }
+  /* body>div {overflow-x:hidden;} */
+ 
+  /* Set core body defaults */
+  body {
+    text-rendering: optimizeSpeed;
+    line-height: 1.5;
+  }
+  
+  /* A elements that don't have a class get default styles */
+  a:not([class]) {
+    text-decoration-skip-ink: auto;
+  }
+  
+  /* Make images easier to work with */
+  img,
+  picture,
+  svg {
+    max-width: 100%;
+    display: block;
+  }
+  
+  /* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
+  @media (prefers-reduced-motion: reduce) {
+    html:focus-within {
+      scroll-behavior: auto;
+    }
+  
+    *,
+    *::before,
+    *::after {
+      animation-duration: 0.01ms !important;
+      animation-iteration-count: 1 !important;
+      transition-duration: 0.01ms !important;
+      scroll-behavior: auto !important;
+    }
+  }
+
+  .visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap; /* added line */
+    border: 0;
+  }
+
+
+:root{
+  --fw-regular: 400;
+  --fw-semi-bold: 500;
+  --fw-bold: 700;
+
+  --fs-300: 0.8125rem;
+  --fs-400: 0.875rem;
+  --fs-500: 0.9375rem;
+  --fs-600: 1rem;
+  --fs-700: 1.875rem;
+  --fs-800: 2.5rem;
+  --fs-900: 3.5rem;
+
+  --fs-body: var(--fs-400);
+  --fs-primary-heading: var(--fs-800);
+  --fs-secondary-heading: var(--fs-700);
+  --fs-nav: var(--fs-500);
+  --fs-button: var(--fs-300);
+
+  --size-100: 0.25rem;
+  --size-200: 0.5rem;
+  --size-300: 0.75rem;
+  --size-400: 1rem;
+  --size-500: 1.5rem;
+  --size-600: 2rem;
+  --size-700: 3rem;
+  --size-800: 4rem;
+  --size-900: 5rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+
+
+
+.App{
   display: flex;
+  min-height: 100vh;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  scroll-behavior: smooth;
   color: white;
+  background: linear-gradient(180deg, #002339 0%, #1D0B1D 100%);
+  padding: 3em;
 }
 
-.App-link {
-  color: #61dafb;
+.container {
+  --max-width: 1500px;
+  --container-padding: 1rem;
+
+  width: min(var(--max-width), 100% - (var(--container-padding) * 2));
+  margin-inline: auto;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.pagebtn{
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  padding: 1rem;
+  display: flex;
+  gap: 2px;
+}
+
+.pagebtn1{
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  background: #28B77C;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.pagebtn2{
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  background: #28B77C;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.pagebtn1Icon{
+  width: 15px;
+  transform: rotate(180deg);
+}
+
+.pagebtn2Icon{
+  width: 15px;
+}
+
+.matrixlabDiv{
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 15px;
+  background: #28B77C;
+  border-radius: 4px;
+  padding: 10px 15px;
+  margin-left: 5px;
+}
+
+.main{
+  color: white;
 }
